2005-08-11  Don Allingham  <don@gramps-project.org>
	* src/DbState.py: handle self.index == -1
	* src/PageView.py: Provide PersonNavPage to handle page views
	that to person navigation
	* src/PedView.py: Derive from PersonNavPage
	* src/PersonView.py: Derive from PersonNavPage
	* src/ViewManager.py: Call new change_page to make sure history 
	buttons are correct for the view.
	
2005-08-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: More work on it.
	* src/MapView.py: New View showing locations on a map. Early unfinished version.
	* src/gramps_main.py: Enable MapView
	* src/land_shallow_topo_2048.jpg:
	* src/land_shallow_topo_350.jpg: Two new map images downloaded from NASA
	so the are assumed to be public domain.

2005-08-10  Don Allingham  <don@gramps-project.org>
	* src/DbState.py: separate database class from display class
	* src/EditPerson.py: separate database class from display class
	* src/GrampsDbBase.py: separate database class from display class
	* src/PageView.py: separate database class from display class
	* src/PedView.py: separate database class from display class
	* src/PersonView.py: separate database class from display class
	* src/RelLib.py: separate database class from display class
	* src/ViewManager.py: separate database class from display class
	* src/gramps_main.py: separate database class from display class
	* src/Navigation.py: provides navigation ability for the history menu
	
2005-08-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Better autoscaling; better ui management

2005-08-09  Don Allingham  <don@gramps-project.org>
	* src/ScratchPad.py: added
	* src/stock_link.png: added
	* src/DbState.py: better ui management, history management
	* src/EditPerson.py: better ui management
	* src/GrampsDbBase.py: better ui management
	* src/PageView.py: better ui management
	* src/PersonView.py: better ui management, history management
	* src/ViewManager.py: better ui management
